# textual-themes

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.de.md  README.md  bootstrap.ps1  bootstrap.sh  compile-linux.sh  compile-macos.sh  compile-win64.ps1  install.ps1  install.sh  pyproject.toml  run.bat  run.ps1  run.sh  setup.bat  setup.sh
.github/workflows/: ci.yml  release.yml
assets/: icon.icns  make_icon.py
docs/: app.js  index.html  style.css
scripts/: gen_screenshots.py
src/textual_themes/: __init__.py  __main__.py  demo.py  generator.py  themes.py
tests/: test_themes.py
