[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textual-themes"
version = "0.6.0"
description = "36 retro color themes for Textual TUI apps — vintage 8-bit, terminal, watch, comic-pulp, 80s-pastel, Spielberg-era cinema and reggae palettes"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Michael Blaess" },
]
keywords = ["textual", "tui", "themes", "retro", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Textual",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.85",
    "textual-widgets @ git+https://github.com/michaelblaess/textual-widgets.git",
]

[project.urls]
Homepage = "https://github.com/michaelblaess/textual-themes"
Repository = "https://github.com/michaelblaess/textual-themes"
Issues = "https://github.com/michaelblaess/textual-themes/issues"

[project.scripts]
textual-themes-demo = "textual_themes.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
