[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textual-themes"
version = "0.6.0"
description = "36 retro color themes for Textual TUI apps — vintage 8-bit, terminal, watch, comic-pulp, 80s-pastel, Spielberg-era cinema and reggae palettes"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Michael Blaess" },
]
keywords = ["textual", "tui", "themes", "retro", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Textual",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.85",
    "textual-widgets @ git+https://github.com/michaelblaess/textual-widgets.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "poethepoet>=0.29",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/michaelblaess/textual-themes"
Repository = "https://github.com/michaelblaess/textual-themes"
Issues = "https://github.com/michaelblaess/textual-themes/issues"

[project.scripts]
textual-themes-demo = "textual_themes.__main__:main"

[tool.poe.tasks]
demo = { cmd = "python -m textual_themes", help = "Startet die Theme-Demo" }
test = { cmd = "pytest", help = "Tests sequentiell (schnell bei Unit-Tests)" }
test-parallel = { cmd = "pytest -n auto", help = "Tests parallel (fuer langsame Test-Suiten)" }
cov = { cmd = "pytest --cov=textual_themes --cov-report=term-missing", help = "Tests + Coverage" }
typecheck = { cmd = "mypy src", help = "mypy strict ueber src/" }
lint = { cmd = "ruff check .", help = "Ruff Linting" }
fmt = { cmd = "ruff format .", help = "Ruff Formatting" }
fix = { cmd = "ruff check --fix .", help = "Ruff Auto-Fix" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]
